finished add random colors and reset button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div id="btn"><button>Reset</button></div>
+    <div id="all-buttons">
+      <div id="reset-button"><button>Reset</button></div>
+      <div id="random-color-button"><button>Random Color Mode</button></div>
+    </div>
     <div id="grid-container"></div>
   </body>
 </html>
